# src/api/v1/cart/controllers/deleteItem.js
@@ -1,5 +1,34 @@
+const cartService = require("../../../../lib/cart");
+const { getTransfromSingleData } = require("../../../../utils/responseData");
+
 const deleteItem = async (req, res, next) => {
-  console.log("Hello deleteItem");
+  const { id } = req.params;
+
+  try {
+    const deletedCart = await cartService.deleteItem(id);
+
+    // generate the atuale data for the response
+    const data = getTransfromSingleData({
+      item: deletedCart,
+      selection: [
+        "id",
+        "customer",
+        "product",
+        "quantity",
+        "updatedat",
+        "createdat",
+      ],
+    });
+
+    const response = {
+      code: 200,
+      data
+    }
+
+    res.status(200).json(response);
+  } catch (error) {
+    next(error);
+  }
 };
 
 module.exports = deleteItem;
